--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "type": "git",
     "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-prologue.git"
   },
-  "author": {
-    "name": "Anubhav Srivastava",
-    "email": "anubhav.srivastava00@gmail.com"
-  },
   "dependencies": {
     "gatsby": "^2.20.2",
     "gatsby-plugin-manifest": "^2.3.1",
@@ -33,7 +29,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.2.0",
     "prettier": "^1.17.0",
     "rimraf": "^3.0.2"
   },
@@ -42,9 +38,5 @@
     "gatsby-starter",
     "gatsby-starter-prologue"
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anubhavsrivastava/gatsby-starter-prologue/issues"
-  },
-  "homepage": "https://github.com/anubhavsrivastava/gatsby-starter-prologue#readme"
+  "license": "MIT"
 }
